--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -4,16 +4,19 @@ on: [push]
 
 jobs:
   build:
+    runs-on: '${{ matrix.os }}'
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: 
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
         py-version:
           - 3.7
           - 3.8
           - 3.9
-    runs-on: ${{ matrix.os }}
     steps:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-       python-version: ${{ matrix.py-version }}
+       python-version: '${{ matrix.py-version }}'
